--- a/locales/locale.json
+++ b/locales/locale.json
@@ -1,17 +1,35 @@
 {
-    "Could not translate text. The reason is ": {
-        "vi": ""
+    "err.UnableToTranslate": {
+        "en": "Could not translate text. The reason is "
     },
-    "Translate Text": {
-        "vi": ""
+    "msg.formTranslate.Title": {
+        "en": "Translate Text"
     },
-    "To Language": {
-        "vi": ""
+    "msg.formTranslate.To": {
+        "en": "To Language"
     },
-    "Select language": {
-        "vi": ""
+    "msg.formTranslate.ToHint": {
+        "en": "Select language"
     },
-    "Enter text in any language to be translated": {
-        "vi": ""
+    "msg.formTranslate.Text": {
+        "en": "Text"
+    },
+    "msg.formTranslate.TextHint": {
+        "en": "Enter text in any language to be translated"
+    },
+    "msg.formTranslate.Translate": {
+        "en": "Translate"
+    },
+    "msg.Help": {
+        "en": "Hey {{user}} I am here to help. You can now translate text easily in one of three ways:\n• Use the `/translate` command. The syntax is `/translate [lang] [text]` Where [lang] is equal to a language code such as `de`, `vi`, `ja`, `es`. <https://github.com/siquylee/slack-translator/wiki|Click here> to see the full list of language codes. The source text doesn't have to be English, the app will attempt to auto-detect the source language. There is a 2000 character limit per command.• Or use `Translate` action from the actions menu for any Slack messages\n• Or enter `/translate` and the app shows a dialog with fields to select target language and enter your text.\n"
+    },
+    "msg.Feedback": {
+        "en": "Feedback"
+    },
+    "msg.Feedback.Url": {
+        "en": "Feedback"
+    },
+    "msg.Support": {
+        "en": "Buy Me a Coffee"
     }
 }
