--- a/locales/locale.json
+++ b/locales/locale.json
@@ -8,6 +8,9 @@
     "msg.formTranslate.From": {
         "en": "From"
     },
+    "msg.formTranslate.Auto": {
+        "en": "Auto"
+    },
     "msg.formTranslate.To": {
         "en": "To"
     },
