Fixed bugs found during the review process

--- a/locales/locale.json
+++ b/locales/locale.json
@@ -2,6 +2,9 @@
     "err.UnableToTranslate": {
         "en": "Could not translate text. The reason is "
     },
+    "err.General": {
+        "en": "Oops! Something went wrong!\nHelp us improve your experience by sending an error report"
+    },
     "msg.formTranslate.Title": {
         "en": "Translate Text"
     },
